@@ -1,3 +1,9 @@
+2007-09-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/5034
+	* config/tc-i386.c (intel_e04): Return 1 if cur_token.code is
+	T_NIL.
+
 2007-09-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config/tc-i386.c (build_modrm_byte): Adjust comment line
